--- a/filters.html
+++ b/filters.html
@@ -39,7 +39,7 @@
             <li><a href="./search-2.html">Search Results</a></li>
             <li><a href="./search-3.html">Search Continued</a></li>
             <li><a href="./search-4.html" >Search Continued Part 1</a></li>
-            <li><a href="./search-5.html" >Search Continued Part 2</a></li>
+            <li><a href="./message-2.html" >Multi Select Dropdown</a></li>
             <li><a href="./search-6.html" >Search Continued Part 3</a></li>
             <li><a href="./search-7.html" >Search Continued Part 4</a></li>
             <li><a href="./filters.html" class='active-nav'>filters</a></li>
@@ -48,6 +48,9 @@
             <li><a href="./message-2.html" >Building Blocks Part 1</a></li>
             <li><a href="./message-3.html" >Building Blocks Part 2</a></li>
             <li><a href="./message-4.html" >Building Blocks Part 3</a></li>
+            <li><a href="./pagination-1.html" >Pagination</a></li>
+            <li><a href="./page-break.html" >Pagination</a></li>
+            <li><a href="./list-items.html" >List Item</a></li>
         </ul>
     </nav>
 
