--- a/list-items.html
+++ b/list-items.html
@@ -43,16 +43,13 @@
             <li><a href="./search-6.html" >Search Continued Part 3</a></li>
             <li><a href="./search-7.html" >Search Continued Part 4</a></li>
             <li><a href="./filters.html">filters</a></li>
-            <li><a href="./vertical-nav.html" class='active-nav'>Vertical Navigation</a></li>
+            <li><a href="./vertical-nav.html" >Vertical Navigation</a></li>
             <li><a href="./message1.html"  >Building Blocks</a></li>
-            <li><a href="./message-2.html" >Building Blocks Part 1</a></li>
+            <li><a href="./message-2.html" >Multi Select Dropdown</a></li>
             <li><a href="./message-3.html" >Building Blocks Part 2</a></li>
             <li><a href="./message-4.html" >Building Blocks Part 3</a></li>
-            <li><a href="./pagination-1.html" >Pagination</a></li>
-            <li><a href="./page-break.html" >Pagination</a></li>
-            <li><a href="./list-items.html" >List Item</a></li>
-
-
+            <li><a href="./list-items.html" class='active-nav' >List Item</a></li>
+            
         </ul>
     </nav>
 
@@ -63,7 +60,7 @@
             <div class="header-title">
                 <span class="sub-title">COMPONENT</span>
                 <span class="main-title">
-					<strong>TABS</strong>
+					<strong>LIST ITEMS</strong>
 				</span>
                 <span class="decor-line"></span>
             </div>
@@ -94,15 +91,23 @@
                     <div class="interactive-view-wrapper">
                         <div class="interactive-view-container" data-id="id-set-1">
                             <section class="sg-demo-wrapper">
-                            	<div class="sg-tabs-container">
-                                    <ul class="vertical-nav">
-                                        <li><a href="#" class="active-nav">Project Handover</a></li>
-                                        <li><a href="#">Changes</a></li>
-                                        <li><a href="#">Loan Transactions</a></li>
-                                        <li><a href="#">Equity Transactions</a></li>
-                                        <li><a href="#">Supervision Process</a></li>
-                                    </ul>
-                            	</div>
+                            	<div class="list-item">
+                                    <div>
+                                    <p> lorem ipsum dolor sit amet</p>
+                                    <p class="secondary"> lorem ipsum dolor sit amet,lorem ipsum dolor sit amet
+                                        lorem ipsum dolor sit amet,lorem ipsum dolor sit amet
+                                    </p>
+                                    <p class="pull-date">Jan/01 13:30</p>
+                                    </div>
+                                    <div class="line-space"></div>
+                                    <div class="message-2">
+                                    <p> lorem ipsum dolor sit amet</p>
+                                    <p class="secondary"> lorem ipsum dolor sit amet,lorem ipsum dolor sit amet
+                                        lorem ipsum dolor sit amet,lorem ipsum dolor sit amet
+                                    </p>
+                                    <p class="pull-date">Jan/01 13:30</p>
+                                    </div>
+                                    </div>
                             </section>
                         </div>
                     </div>
