--- a/message-3.html
+++ b/message-3.html
@@ -48,7 +48,9 @@
             <li><a href="./message-2.html" >Building Blocks Part 1</a></li>
             <li><a href="./message-3.html" class='active-nav'>Building Blocks Part 2</a></li>
             <li><a href="./message-4.html" >Building Blocks Part 3</a></li>
-            
+            <li><a href="./pagination-1.html" >Pagination</a></li>
+            <li><a href="./page-break.html" >Pagination</a></li>
+            <li><a href="./list-items.html" >List Item</a></li>
 
         </ul>
     </nav>
@@ -91,15 +93,19 @@
                     <div class="interactive-view-wrapper">
                         <div class="interactive-view-container" data-id="id-set-1">
                             <section class="sg-demo-wrapper">
-                            	<div class="sg-tabs-container">
-                            	<div class="text-message">
-                                        <i class="nc-icon-glyph design_todo"></i> 
-                                  <div class="text-head">
-                                      Lorem ipsum dolor
-                                  </div>             
-                                 Lorem ipsum dolor sit amet, consectetur adipiscing…
+                                <div class="error">
+                                    <span class="sg-form-input-label">Field Label</span>
+                                    <input type="text" class="sg-form-text-input" placeholder="Placeholder text">
+                                    <div class="error-message">
+                                        <div class="error-message-line">Required</div>
+                                    </div>
                                 </div>
-                            	</div>
+                                <div class="error">
+                                    <span class="sg-form-input-label">Field Label</span>
+                                    <input type="text" class="sg-form-text-input" placeholder="Placeholder text">
+                                    <div class="error-message"><div class="error-message-block">some messages require longer text.It is permitted to use a text-style container</div></div>
+                                    
+                                </div>
                             </section>
                         </div>
                     </div>
