--- a/cards.html
+++ b/cards.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" type="text/css" href="./css/styleGuide-lib.css">
     <script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="./js/helperScript.js"></script>
+    <script type="text/javascript">
+		$(document).ready(function(){
+			$(".gs-tabs-navigation > .sg-tab-menu-item").on("click",function(evt){
+				// remove any existing active elements
+				$(this).closest(".sg-tabs-container-task-panel")
+					   .find(".active-tab-item")
+					   .removeClass("active-tab-item");
+				// add active class to clicked element
+				$(this).addClass("active-tab-item");
+				$(this).closest(".sg-tabs-container-task-panel")
+					   .find(".sg-tabs-body .sg-tab-content[data-item='"+($(this).data("item"))+"']")
+					   .addClass("active-tab-item");
+			});
+		});
+	</script>
 </head>
 
 <body>
@@ -16,9 +31,9 @@
         <ul class="navigation-component">
             <li><a href="./forms.html" >Form Controls</a></li>
             <li><a href="./buttons.html">Buttons</a></li>
-            <li><a href="./tabs.html" >Task Navigation</a></li>
+            <li><a href="./tabs.html" >Card Navigation</a></li>
             <li><a href="./selection.html">Selection Controls</a></li>
-            <li><a href="./cards.html" class='active-nav'>Card Navigation</a></li>
+            <li><a href="./cards.html" class='active-nav'>Task Navigation</a></li>
             <li><a href="./datalist.html">Data List</a></li>
             <li><a href="./search.html">Search</a></li>
             <li><a href="./search-2.html">Search Results</a></li>
@@ -30,9 +45,12 @@
             <li><a href="./filters.html">filters</a></li>
             <li><a href="./vertical-nav.html">Vertical Navigation</a></li>
             <li><a href="./message1.html"  >Building Blocks</a></li>
-            <li><a href="./message-2.html" >Building Blocks Part 1</a></li>
+            <li><a href="./message-2.html" >Multi Select Dropdown</a></li>
             <li><a href="./message-3.html" >Building Blocks Part 2</a></li>
             <li><a href="./message-4.html" >Building Blocks Part 3</a></li>
+            <li><a href="./pagination-1.html" >Pagination</a></li>
+            <li><a href="./page-break.html" >Pagination</a></li>
+            <li><a href="./list-items.html" >List Item</a></li>
         </ul>
     </nav>
 
@@ -43,7 +61,7 @@
             <div class="header-title">
                 <span class="sub-title">COMPONENT</span>
                 <span class="main-title">
-					<strong>FORM</strong> CONTROLS
+					<strong>TASK</strong> PANEL
 				</span>
                 <span class="decor-line"></span>
             </div>
@@ -76,47 +94,54 @@
                         <div class="interactive-view-container" data-id="id-set-1">
 
                             <section class="sg-demo-wrapper">
-                                <div class="sg-form-element">
-                                    <span class="sg-form-title">Example Form (Title)</span>
-                                    <div class="sg-form-element-body">
-                                        <form>
-                                            <div>
-                                                <span class="sg-form-input-label">Field Label</span>
-                                                <input type="text" class="sg-form-text-input" placeholder="Placeholder text" />
-                                            </div>
-                                            <div>
-                                                <span class="sg-form-input-label">Select Label</span>
-                                                <select class="sg-form-select">
-                                                    <option>Placeholder</option>
-                                                    <option>Placeholder text</option>
-                                                    <option>Placeholder number</option>
-                                                </select>
-                                            </div>
-                                            <div>
-                                                <span class="sg-form-input-label">Field Label</span>
-                                                <textarea class="sg-form-textarea">Placeholder text</textarea>
-                                            </div>
-                                            <div>
-                                                <span class="sg-form-input-label">Radio header</span>
-                                                <span class="sg-form-input-wrap">
-													<span><input type="radio" class="sg-form-input-radio-blip" name="demo-radio-group" /><label>Label A</label></span>
-                                                <span><input type="radio" class="sg-form-input-radio-blip" name="demo-radio-group" checked /><label>Label B</label></span>
-                                                </span>
-                                            </div>
-                                            <div>
-                                                <span class="sg-form-input-wrap">
-													<span><input type="checkbox" class="sg-form-input-checkbox-blip" name="demo-checkbox-group" /><label>Checkbox label</label></span>
-                                                </span>
-                                            </div>
-                                            <div>
-                                                <span class="sg-form-footer">
-													<button class="sg-form-submit-button button-active-state">SUBMIT</button>
-													<button class="sg-form-cancel-button">CANCEL</button>
-												</span>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
+                                <div class="sg-tabs-container-task-panel">
+                                                    <div class="gs-tabs-navigation">
+                                                        <span class="sg-tab-menu-item active-tab-item" data-item="1"> Activity log</span>
+                                                        <span class="sg-tab-menu-item" data-item="2"> Decision</span>
+                                                        <span class="sg-tab-menu-item" data-item="3"> Attachment</span>
+                                                        <span class="sg-tab-menu-item" data-item="4">Approval details</span>
+                                                    </div>
+                                                    <div class="sg-tabs-body">
+                                                        <div class="sg-tab-content active-tab-item" data-item="1">
+                                                            <div class="sg-form-element-task">
+                                                                <span class="sg-form-card-title">PDS change Approval</span>
+                                                                <div class="sg-form-element-body">
+                                                                    <form>
+                                                                        <div>
+                                                                            <span class="sg-form-input-label">Field Label</span>
+                                                                            <input type="text" class="sg-form-text-input" placeholder="Placeholder text" />
+                                                                        </div>
+                                                                        <div>
+                                                                            <span class="sg-form-input-label">Field Label</span>
+                                                                            <textarea class="sg-form-textarea">Placeholder text</textarea>
+                                                                        </div>
+                                                                         <div>
+                                                                            <span class="sg-form-input-label">Field Label</span>
+                                                                            <textarea class="sg-form-textarea">Placeholder text</textarea>
+                                                                        </div>
+                                                                        <div>
+                                                                            <span class="sg-form-footer">
+                                                                                <button class="sg-form-submit-button button-active-state">SUBMIT</button>
+                                                                                <!-- <button class="sg-form-submit-button button-active-state">REASSIGN</button> -->
+                                                                                <button class="sg-form-cancel-button">CANCEL</button>
+                                                                            </span>
+                                                                        </div>
+                                                                    </form>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="sg-tab-content" data-item="2">
+                                                            Item TWO contents loaded.
+                                                        </div>
+                                                        <div class="sg-tab-content" data-item="3">
+                                                            Item THREE contents loaded.
+                                                        </div>
+                                                        <div class="sg-tab-content" data-item="4">
+                                                            Item ONE contents loaded.
+                                                        </div>
+                                                    </div>
+                                  </div>
+                               
                             </section>
                         </div>
                     </div>
