--- a/forms.html
+++ b/forms.html
@@ -30,9 +30,12 @@
             <li><a href="./filters.html">filters</a></li>
             <li><a href="./vertical-nav.html">Vertical Navigation</a></li>
             <li><a href="./message1.html"  >Building Blocks</a></li>
-            <li><a href="./message-2.html" >Building Blocks Part 1</a></li>
+            <li><a href="./message-2.html" >Multi Select Dropdown</a></li>
             <li><a href="./message-3.html" >Building Blocks Part 2</a></li>
             <li><a href="./message-4.html" >Building Blocks Part 3</a></li>
+            <li><a href="./pagination-1.html" >Pagination</a></li>
+            <li><a href="./page-break.html" >Pagination</a></li>
+            <li><a href="./list-items.html" >List Item</a></li>
         </ul>
     </nav>
 
