--- a/message-2.html
+++ b/message-2.html
@@ -8,21 +8,13 @@
      <!-- <link rel="stylesheet" type="text/css" href="./css/reset.css"> -->
        <link rel="stylesheet" href="../css/nucleo-outline.css">  
     <link rel="stylesheet" type="text/css" href="./css/styleGuide-lib.css">
+    <link rel="stylesheet" type="text/css" href="./css/chosen.min.css">
     <script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="./js/chosen.jquery.min.js"></script>
     <script type="text/javascript" src="./js/helperScript.js"></script>
     <script type="text/javascript">
 		$(document).ready(function(){
-			$(".gs-tabs-navigation > .sg-tab-menu-item").on("click",function(evt){
-				// remove any existing active elements
-				$(this).closest(".sg-tabs-container")
-					   .find(".active-tab-item")
-					   .removeClass("active-tab-item");
-				// add active class to clicked element
-				$(this).addClass("active-tab-item");
-				$(this).closest(".sg-tabs-container")
-					   .find(".sg-tabs-body .sg-tab-content[data-item='"+($(this).data("item"))+"']")
-					   .addClass("active-tab-item");
-			});
+			$("#multiselect").chosen();
 		});
 	</script>
 </head>
@@ -47,10 +39,12 @@
             <li><a href="./filters.html">filters</a></li>
             <li><a href="./vertical-nav.html">Vertical Navigation</a></li>
             <li><a href="./message1.html"  >Building Blocks</a></li>
-            <li><a href="./message-2.html" class='active-nav'>Building Blocks Part 1</a></li>
+            <li><a href="./message-2.html" class='active-nav'>Mutli Select Dropdown</a></li>
             <li><a href="./message-3.html" >Building Blocks Part 2</a></li>
             <li><a href="./message-4.html" >Building Blocks Part 3</a></li>
-
+            <li><a href="./pagination-1.html" >Pagination</a></li>
+            <li><a href="./page-break.html" >Pagination</a></li>
+            <li><a href="./list-items.html" >List Item</a></li>
         </ul>
     </nav>
 
@@ -61,7 +55,7 @@
             <div class="header-title">
                 <span class="sub-title">COMPONENT</span>
                 <span class="main-title">
-					<strong>TABS</strong>
+					<strong>SELECTION CONTROLS</strong>
 				</span>
                 <span class="decor-line"></span>
             </div>
@@ -92,15 +86,40 @@
                     <div class="interactive-view-wrapper">
                         <div class="interactive-view-container" data-id="id-set-1">
                             <section class="sg-demo-wrapper">
-                            	<div class="sg-tabs-container">
-                            	<div class="toast-message">
-                                        <i class="nc-icon-glyph design_todo"></i> 
-                                  <div class="toast-head">
-                                      Lorem ipsum dolor
-                                  </div>             
-                                 Lorem ipsum dolor sit amet, consectetur adipiscing…
-                                </div>
-                            	</div>
+                            	<select data-placeholder="Choose a Country..." id="multiselect" multiple="" tabindex="3">
+                                    <option value=""></option>
+                                    <option value="United States">United States</option>
+                                    <option value="United Kingdom">United Kingdom</option>
+                                    <option value="Afghanistan">Afghanistan</option>
+                                    <option value="Aland Islands">Aland Islands</option>
+                                    <option value="Albania">Albania</option>
+                                    <option value="Algeria">Algeria</option>
+                                    <option value="American Samoa">American Samoa</option>
+                                    <option value="Andorra">Andorra</option>
+                                    <option value="Angola">Angola</option>
+                                    <option value="Anguilla">Anguilla</option>
+                                    <option value="Antarctica">Antarctica</option>
+                                    <option value="Antigua and Barbuda">Antigua and Barbuda</option>
+                                    <option value="Argentina">Argentina</option>
+                                    <option value="Armenia">Armenia</option>
+                                    <option value="Aruba">Aruba</option>
+                                    <option value="Australia">Australia</option>
+                                    <option value="Austria">Austria</option>
+                                    <option value="Azerbaijan">Azerbaijan</option>
+                                    <option value="Bahamas">Bahamas</option>
+                                    <option value="Bahrain">Bahrain</option>
+                                    <option value="Bangladesh">Bangladesh</option>
+                                    <option value="Barbados">Barbados</option>
+                                    <option value="Belarus">Belarus</option>
+                                    <option value="Belgium">Belgium</option>
+                                    <option value="Belize">Belize</option>
+                                    <option value="Benin">Benin</option>
+                                    <option value="Bermuda">Bermuda</option>
+                                    <option value="Bhutan">Bhutan</option>
+                                    <option value="Yemen">Yemen</option>
+                                    <option value="Zambia">Zambia</option>
+                                    <option value="Zimbabwe">Zimbabwe</option>
+                                </select>
                             </section>
                         </div>
                     </div>
