--- a/message-4.html
+++ b/message-4.html
@@ -33,7 +33,7 @@
             <li><a href="./buttons.html">Buttons</a></li>
             <li><a href="./tabs.html" >Card Navigation</a></li>
             <li><a href="./selection.html">Selection Controls</a></li>
-            <li><a href="./cards.html">Card Navigation</a></li>
+            <li><a href="./cards.html">Task Navigation</a></li>
             <li><a href="./datalist.html">Data List</a></li>
             <li><a href="./search.html">Search</a></li>
             <li><a href="./search-2.html">Search Results</a></li>
@@ -48,7 +48,9 @@
             <li><a href="./message-2.html" >Building Blocks Part 1</a></li>
             <li><a href="./message-3.html" >Building Blocks Part 2</a></li>
             <li><a href="./message-4.html" class='active-nav' >Building Blocks Part 3</a></li>
-            
+            <li><a href="./pagination-1.html" >Pagination</a></li> 
+            <li><a href="./page-break.html" >Pagination</a></li>
+            <li><a href="./list-items.html" >List Item</a></li>
 
         </ul>
     </nav>
@@ -92,7 +94,8 @@
                         <div class="interactive-view-container" data-id="id-set-1">
                             <section class="sg-demo-wrapper">    
                                 <div class="sg-form-element">
-                                    <span class="sg-form-title">Pardon the Interuption</span>
+                                    <h1 class="sg-form-title">Pardon the Interuption</h1>
+                                    <div class="pardon-line"></div>
                                     <div class="sg-form-element-body">
                                         <form>
                                             <div class="modal-box">
