--- a/search-7.html
+++ b/search-7.html
@@ -22,7 +22,7 @@
             <li><a href="./buttons.html">Buttons</a></li>
             <li><a href="./tabs.html" >Card Navigation</a></li>
             <li><a href="./selection.html">Selection Controls</a></li>
-            <li><a href="./cards.html" >Card Navigation</a></li>
+            <li><a href="./cards.html" >Task Navigation</a></li>
             <li><a href="./datalist.html">Data List</a></li>
             <li><a href="./search.html" >Search</a></li>
             <li><a href="./search-2.html">Search Results</a></li>           
@@ -37,6 +37,10 @@
             <li><a href="./message-2.html" >Building Blocks Part 1</a></li>
             <li><a href="./message-3.html" >Building Blocks Part 2</a></li>
             <li><a href="./message-4.html" >Building Blocks Part 3</a></li>
+            <li><a href="./pagination-1.html" >Pagination</a></li>
+            <li><a href="./page-break.html" >Pagination</a></li>
+            <li><a href="./list-items.html" >List Item</a></li>
+
         </ul>
     </nav>
 
